<?xml version="1.0"?>
<package format="2">
  <name>p3dx-robot</name>
  <version>0.0.1</version>
  <description>The p3dx-robot package</description>

  <maintainer email="nitin.kasshyap@gmail.com">nitin</maintainer>

  <license>TODO</license>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>roscpp</exec_depend> -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend> -->
  <exec_depend>tf</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
